--- a/buildchain/package.json
+++ b/buildchain/package.json
@@ -7,6 +7,7 @@
     "url": "https://nystudio107.com"
   },
   "dependencies": {
+    "jquery": "^3.6.0",
     "vue": "^3.0.5",
     "vue-confetti": "^2.0.8"
   },
